[gd_scene load_steps=7 format=2]

[ext_resource path="res://space.png" type="Texture" id=1]
[ext_resource path="res://background.gd" type="Script" id=2]
[ext_resource path="res://planet.png" type="Texture" id=3]
[ext_resource path="res://planet3.png" type="Texture" id=4]
[ext_resource path="res://planet2.png" type="Texture" id=5]
[ext_resource path="res://gear.png" type="Texture" id=6]

[node name="background" type="ParallaxBackground"]
script = ExtResource( 2 )

[node name="space" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.01, 0.01 )

[node name="Sprite" type="Sprite" parent="space"]
position = Vector2( 50, 15 )
scale = Vector2( 7, 7 )
texture = ExtResource( 1 )

[node name="planet" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="planet"]
position = Vector2( 152, 16 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 0 )

[node name="planet4" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="planet4"]
position = Vector2( 150, 15 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
offset = Vector2( 2000, 0 )

[node name="planet2" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="planet2"]
position = Vector2( 150, 15 )
texture = ExtResource( 5 )
offset = Vector2( -700, -200 )

[node name="planet3" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.05, 0.05 )

[node name="Sprite" type="Sprite" parent="planet3"]
position = Vector2( 150, 15 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
offset = Vector2( -500, 500 )

[node name="gear" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.5, 0.5 )
motion_mirroring = Vector2( 1500, 1000 )

[node name="Sprite" type="Sprite" parent="gear"]
position = Vector2( 296, -40 )
scale = Vector2( 4, 4 )
texture = ExtResource( 6 )

[node name="Sprite2" type="Sprite" parent="gear"]
position = Vector2( 552, 160 )
scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
